<?xml version="1.0"?>
<package format="2">
  <name>linear_interpolation_planner</name>
  <version>0.0.0</version>
  <description>The linear_interpolation_planner package</description>

  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://ouxt.oska</url>
  <url type="repository">https://github.com/OUXT-Polaris/linear_interpolation_planner</url>
  <url type="bugtracker">https://github.com/OUXT-Polaris/linear_interpolation_planner/issues</url>

  <author email="groadpg@gmail.com">RyodoTanaka</author>
  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>usv_navigation_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>

</package>
